# WebVidoDowloader

./: .gitignore  README.md  app.py  pyproject.toml  social_media_downloader.py  video_downloader.py
static/css/: style.css
static/js/: main.js
templates/: index.html  layout.html
