[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "instaloader>=4.14.1",
    "psycopg2-binary>=2.9.10",
    "pytube>=15.0.0",
    "pytwitter>=0.5",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "trafilatura>=2.0.0",
    "validators>=0.34.0",
    "yt-dlp>=2025.3.31",
]
